fix: Improve pagination and footer spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,6 @@ footer {
   font-size: 0.75em;
   color: var(--color-text-secondary);
   border-top: 1px solid var(--color-border-light);
-  margin-top: 10px;
   padding: 5px 0;
 }
 
@@ -481,11 +480,11 @@ table th {
 }
 
 .pagination {
-    margin: 0;
-    padding: 0;
-    text-align: left;
     display: flex;
     justify-content: space-between;
+    text-align: left;
+    margin: 0;
+    padding: 5px 0;
 }
 
 .pagination li {
